# pingulacore-service

./: .env.example  .gitignore  Dockerfile  README.md  config.agents.yaml  docker-compose.yml  main.py  pyproject.toml  run_fullstack_dev.ps1  run_fullstack_dev.sh
agentic/: __main__.py
agentic/generators/: html_generator.py
agentic/tools/: __init__.py  bolum6_audit.py  image_tools.py
app/: main.py
app/agents/: agent_service.py  config.py
app/api/: agent.py  explorer.py  legacy.py  logs.py  pipeline.py
app/core/: config.py
app/db/: database.py  models.py  repository.py
app/schemas/: api.py  domain.py  validation.py
app/services/: legacy_pipeline_service.py  log_stream_service.py  pipeline_log_service.py  pipeline_service.py  sub_pipeline_files_service.py
app/utils/: usage.py
configs/ornek/: bireysel.yaml
configs/test/: test_b1_1_ornek.yaml  test_b1_1_ornek_1q.yaml  test_b3_ornek_1q.yaml
docs/: codebase_documentation.md
frontend/: index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
pomodoro/: __init__.py  geometry_scene.py  geometry_validator.py  graph.py  illustration_presets.py  models.py  number_pool.py  solid3d_scene.py  solid3d_validator.py  variant_rotation.py  yaml_loader.py
pomodoro/chains/: chain_generate_geometry_image.py  chain_generate_geometry_scene.py  chain_generate_image.py  chain_generate_solid3d_image.py  chain_generate_solid3d_scene.py  (+6 more)
src/: render_geometry_scene.py  render_solid3d_scene.py
utils/: currency_assets.py
(+44 files in other folders)
