[project]
name = "pingulacore-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic-ai>=1.81.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    # Vendored legacy pipelines (geometry pomodoro + turkce agentic)
    "langchain",
    "langchain-core",
    "langchain-google-genai",
    "langgraph",
    "google-genai",
    "pydantic",
    "python-dotenv",
    "pymupdf",
    "playwright",
    "pillow",
    "img2pdf",
    "pdf2image",
    "pyphen",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pomodoro*", "utils*", "src*", "agentic*"]
exclude = ["frontend*", "legacy_runners*", "ortak*", "templates*", "meb_books*", "data*", "configs*", "konular*"]
